# kite-mcp-tool

./: .gitignore  .oxlintrc.json  README.md  agents.md  c.txt  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  requirements.txt  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  env.ts  index.js  index.ts  mcp-client.test.ts  mcp-client.ts  package-lock.json  package.json  pnpm-lock.yaml  rpc.integration.test.ts
backend/middlewares/: error.ts  validate.ts
backend/routes/: chat.ts  rpc.ts  ws.ts
backend/src/: app.js  index.js
backend/src/__tests__/: integration.test.js
backend/src/config/: index.js
backend/src/routes/: api.js
backend/src/services/: index.js  mcpService.js  webSocketService.js
backend/src/types/: mcp.js
backend/src/utils/: logger.js
backend/types/: rpc.ts
backend/utils/: http-error.ts  logger.ts
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  rpc.ts
frontend/src/components/: ApiTest.tsx  DarkModeToggle.tsx  DataTable.tsx  Layout.tsx  LoadingSpinner.tsx  ThemeToggle.tsx
frontend/src/hooks/: useAuth.ts  useTheme.tsx  (+1 more)
mcp_server/: config.py  server.py
mcp_server/agents/: __init__.py  qa_agent.py  query_agent.py
mcp_server/tools/: __init__.py  tavily_search.py  webpage_scraper.py
research-mcp/: pyproject.toml
tests/: test_pipeline_happy.py  test_server_boot.py
types/: global.d.ts
(+18 files in other folders)
