[project]
name = "research-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "atomic-agents>=1.1.3",
    "beautifulsoup4>=4.13.4",
    "instructor>=1.8.3",
    "lxml[html-clean]>=5.4.0",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.9.4",
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.4",
]
